# metodos-numericos-edo

./: .gitignore  README.md  SCRIPT_teste_newton.m  SCRIPT_teste_secante.m
C++/: .gitignore  CMakeLists.txt  README.md  main.cpp
C++/CashKarp/: CashKarp.cpp  CashKarp.hpp
C++/Secant/: Secant.cpp  Secant.hpp
PassoAdaptativo/: CashKarp.m  CashKarpStep.m  README.md  adapt_stepsize.m  temp.m
PassoAdaptativo/private/: adapt_stepsize.m  cash_karp_step.m
PassoConstante/: AdamsBashforth.m  AdamsMoulton.m  ExplicitEuler.m  HeunMethod.m  MidpointMethod.m  README.md  RungeKutta4.m  RungeKuttaRalston.m  SCRIPT_testmethods.m  TestAllMethods.m  multi_step.m  simple_step.m
PassoConstante/private/: AdamsBashforthStep.m  AdamsMoultonStep.m  ExplicitEulerStep.m  HeunMethodStep.m  MidpointMethodStep.m  RungeKutta4Step.m  RungeKuttaRalstonStep.m
RaizesEquacoesNaoLineares/: SecantMethod.m
RaizesEquacoesNaoLineares/private/: secant_method_step.m
RaizesFuncoesNaoLineares/: NewtonMethod.m  README.md  SecantMethod.m
RaizesFuncoesNaoLineares/private/: newton_method_step.m  secant_method_step.m
